# fastapi-pydantic-mania

./: .gitignore  README.md  main.py  patient_database.db  pyproject.toml  serialize_model_include_exclude_fields.py
01-essentials/: user_product_model.py
02-fields_validation/: cart_blog_post_model.py
03-validation_by_decorators/: field_model_validator.py
04-nested_models/: 4.1-model_referencing_other.py  4.2-model_referencing_own.py  4.3-task_course_model.py  task_course_model.py
05-serialization/: serialize_model.py
06-dependency_injection_fastapi/: user_signup.py
07-why_pydantic/: 7.1-structure_a_model.py  7.2-using_optional_annotated.py
08-more_data_validation/: 8.1-data_validation_field_validator.py  8.2-data_validation_model_validatior.py  8.3-data_validation_computed_field.py
09-FastAPI_injunction/: 9-0-crashing_api_routes.py  9-1-display_json_route.py  9-2-path_query_params.py  9-3-post_request.py  9-4-put_del_request.py  9-5-model_prediction.py  9-6-sqlmodel_data_operations.py  insurance_premium_prediction_model.joblib  patient_data.json  user_input_literals.yaml
09-FastAPI_injunction/models/: __init__.py  patient_models.py
09-FastAPI_injunction/notebooks_exp/: colab_setup_check.ipynb  feature_engg_ml_model.ipynb
09-FastAPI_injunction/utils/: __init__.py  load_update_data.py  score_prediction.py
