[project]
name = "fastapi-pydantic-mania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn==1.6.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.35.0",
]
